2016-04-27 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp:459 ref[0] should be ref[i], a bug reported by Petr Velan

2016-04-21 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp:4048 the comparison (vals[i] > last) should have
	been (vals[i] != last)
	* src/bord.cpp:3678 add variable diropt to capture a more complex
	logical in taking the incoming argument for sorting directions
	(ascin)
	* tests/vault/marksdb-3: correct the output expected, previous
	results was sorted in the in correct oder (thanks to the bug
	report from Will Glozer <will at kentik dot com> for bringing
	attention to this problem)

2016-02-28 John Wu <John dot Wu at ACM dot org>
	* NEWS: update for the new release 2.0.3

2016-01-31 John Wu <John dot Wu at ACM dot org>
	* src/util.h: rename ibis::util::cleanDatasets to ibis::util::emptyCache
	* src/part.cpp, src/query.cpp, src/filter.cpp: add calls to
	ibis::util::emptyCache (previously, cleanDatasets)

2016-01-29 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp: in util::readDouble check the length of the string
	before comparing against the constants
	* src/part.cpp: throw exception rather than return a negative
	error code after failing to allocate memory
	* src/query.h, src/query.cpp: add function storeErrorMesg,
	intending to record error message composed with ibis::util::logger
	* src/util.h: add member functions str and c_str to
	bis::util::logger class

2016-01-28 John Wu <John dot Wu at ACM dot org>
	* examples/thula.cpp: add statements to print out the command line
	arguments to aid debugging of trouble reported by check-sq2
	* src/fileManager.cpp, src/bundle.cpp: change all message prefix
	"Error" to "Warning"
	* src/bundle.cpp: in bundles::sort check every column for the
	minimum number of rows

2016-01-27 John Wu <John dot Wu at ACM dot org>
	* win/FlexLexer.h: use the new version from macPorts for flex 3.0
	* src/fromParser.yy, src/selectParser.yy, src/whereParser.yy: