@@ -1,5 +1,9 @@
 2016-04-27 John Wu <John dot Wu at ACM dot org>
-	* src/bord.cpp:459 ref[0] should be ref[i], a bug reported by Petr Velan
+	* src/bord.cpp:459 ref[0] should be ref[i], a bug reported by Petr
+	Velan
+	* src/ikeywords.cpp: in function ibis::keywords::parseTextFile
+	read .sp file with buffer read function (fread) instead of
+	unbuffered read function (read) per suggestion from Jon Strabala
 
 2016-04-21 John Wu <John dot Wu at ACM dot org>
 	* src/bord.cpp:4048 the comparison (vals[i] > last) should have
